[gd_scene load_steps=10 format=3 uid="uid://d2xwmhitg3r0s"]

[ext_resource type="Texture2D" uid="uid://bmcnpwcnd0e7b" path="res://assets/UI_UX/egg_shop_2.png" id="1_6uwgt"]
[ext_resource type="Script" uid="uid://bvnirfjcn1rki" path="res://scripts/shop/egg_reward.gd" id="1_obqpo"]
[ext_resource type="FontFile" uid="uid://c5qw4j6h2tlna" path="res://assets/UI_UX/fusion-pixel-10px-proportional-sc-latin-400-normal.woff2" id="3_6uwgt"]
[ext_resource type="PackedScene" uid="uid://bcljydvr0vfrd" path="res://scenes/shop/egg_choice.tscn" id="4_6uwgt"]
[ext_resource type="Texture2D" uid="uid://bco5px5imylcw" path="res://assets/UI_UX/close_button.png" id="4_8x5px"]
[ext_resource type="Resource" uid="uid://diqjpikgo3g1m" path="res://scripts/egg_creatures/creature_bunny.tres" id="6_xamil"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dlu5g"]
atlas = ExtResource("1_6uwgt")
region = Rect2(150, 20, 8, 322)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7ccjj"]
texture = SubResource("AtlasTexture_dlu5g")
texture_margin_left = 1.0
texture_margin_right = 1.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="LabelSettings" id="LabelSettings_8x5px"]
font = ExtResource("3_6uwgt")
font_size = 30
font_color = Color(1, 1, 0.921569, 1)
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="EggReward" type="PanelContainer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -122.0
offset_right = 534.0
offset_bottom = 123.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_7ccjj")
script = ExtResource("1_obqpo")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Choose your egg"
label_settings = SubResource("LabelSettings_8x5px")

[node name="CloseButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("4_8x5px")

[node name="ChoiceContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="EggChoiceButton1" parent="MarginContainer/VBoxContainer/ChoiceContainer" instance=ExtResource("4_6uwgt")]
layout_mode = 2

[node name="EggChoiceButton2" parent="MarginContainer/VBoxContainer/ChoiceContainer" instance=ExtResource("4_6uwgt")]
layout_mode = 2
egg_creature = ExtResource("6_xamil")

[node name="EggChoiceButton3" parent="MarginContainer/VBoxContainer/ChoiceContainer" instance=ExtResource("4_6uwgt")]
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="creature_choosen" from="MarginContainer/VBoxContainer/ChoiceContainer/EggChoiceButton1" to="." method="_on_creature_choosen"]
[connection signal="creature_choosen" from="MarginContainer/VBoxContainer/ChoiceContainer/EggChoiceButton2" to="." method="_on_creature_choosen"]
[connection signal="creature_choosen" from="MarginContainer/VBoxContainer/ChoiceContainer/EggChoiceButton3" to="." method="_on_creature_choosen"]
